Refactor For a New Version

--- a/Views/Home/AboutUs.cshtml
+++ b/Views/Home/AboutUs.cshtml
@@ -10,32 +10,37 @@
 <!--end hero banner-->
 <!--page container section-->
 <section class="section_wrap">
-    <div class="container">
-        <!--
-        <div class="section_title">
-            <h2><span>POPULAR</span> DISHES</h2>
-        </div> -->
+	<div class="container">
+		<!--
+		<div class="section_title">
+			<h2><span>POPULAR</span> DISHES</h2>
+		</div> -->
 
-        <p><strong>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard</strong></p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+		<p>
+			Locally owned Food Truck Born and raised in Las Vegas, serving the community since 2018.
+		</p>
 
-        <p><strong>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard</strong></p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+		<p>Our butcher hand-picks all the best meats and vegetables that are grown locally.</p>
 
-    </div>
+		<p>Catering parties are our specialty; we come to you, set up, and care for everything. All you need to do is enjoy the atmosphere and food, and we will take care of the rest. </p>
+
+		<p>
+			When we aren't catering, you can find us at various locations; opt in for our texting program to see where we are and where we will be; feel free to text us anytime if you would like us in your area.
+		</p>
+	</div>
 </section>
 <!--end page container section-->
 <!--about information section-->
 <section class="companyAbout_section">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-7">
-                <div class="companyInro_text">
-                    <span class="companyInro_caption">OUR RESTAURANT</span>
-                    <h2>Salmon, Shrimp, Steak, Chicken all served with rice and veggies!<h2>
-                </div>
-            </div>
-        </div>
-    </div>
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-7">
+				<div class="companyInro_text">
+					<span class="companyInro_caption">OUR RESTAURANT</span>
+					<h2>Salmon, Shrimp, Steak, Chicken all served with rice and veggies!<h2>
+				</div>
+			</div>
+		</div>
+	</div>
 </section>
 <!--end about information section-->
