--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -67,7 +67,9 @@
                             <i class="las la-mobile"></i>
                         </div>
                         <div class="contentSide_text">
-                            <span>Phone: (702) 123 46589<br>
+                            <span>
+                                702-334-4136<br>
+                                <a href="tel:7023344136" class="overlay_link"></a>
                         </div>
                     </div>
 
@@ -76,7 +78,7 @@
                             <i class="las la-envelope"></i>
                         </div>
                         <div class="contentSide_text">
-                            Email: <a href="#">info@backyardhibachi.com</a></span>
+                            <a href="mailto:info@backyardhibachi.com">info@backyardhibachi.com</a></span>
                         </div>
                     </div>
                 </div>
