--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -46,7 +46,7 @@
                                     <div class="foodItem_price">$10</div>
                                 </div>
                                 <div class="foodItem_desc">
-                                    <p>Accusantium quis aut voluptatem id quasi voluptate. At blanditiis voluptas deleniti nihil. Aperiam sed animi recusandae sint.</p>
+                                    <p>Chicken bowl with fried rice and fresh veggies.</p>
                                 </div>
                             </div>
                         </div>
@@ -60,7 +60,7 @@
                                     <div class="foodItem_price">$16</div>
                                 </div>
                                 <div class="foodItem_desc">
-                                    <p>Accusantium quis aut voluptatem id quasi voluptate. At blanditiis voluptas deleniti nihil. Aperiam sed animi recusandae sint.</p>
+                                    <p>Steak bowl with fried rice and fresh veggies.</p>
                                 </div>
                             </div>
                         </div>
@@ -74,7 +74,7 @@
                                     <div class="foodItem_price">$15</div>
                                 </div>
                                 <div class="foodItem_desc">
-                                    <p>Accusantium quis aut voluptatem id quasi voluptate. At blanditiis voluptas deleniti nihil. Aperiam sed animi recusandae sint.</p>
+                                    <p>Shrimp bowl with fried rice fresh veggies.</p>
                                 </div>
                             </div>
                         </div>
@@ -88,7 +88,7 @@
                                     <div class="foodItem_price">$15</div>
                                 </div>
                                 <div class="foodItem_desc">
-                                    <p>Accusantium quis aut voluptatem id quasi voluptate. At blanditiis voluptas deleniti nihil. Aperiam sed animi recusandae sint.</p>
+                                    <p>Salmon bowl with fried rice fresh veggies.</p>
                                 </div>
                             </div>
                         </div>
@@ -102,7 +102,7 @@
                                     <div class="foodItem_price">$7</div>
                                 </div>
                                 <div class="foodItem_desc">
-                                    <p>Accusantium quis aut voluptatem id quasi voluptate. At blanditiis voluptas deleniti nihil. Aperiam sed animi recusandae sint.</p>
+                                    <p>Veggie bowl fresh veggies with fried rice or just make it a double veggies bowl.</p>
                                 </div>
                             </div>
                         </div>
@@ -117,11 +117,39 @@
                     <div class="dishes_foodLists">
                         <!--dishFood Item-->
                         <div class="dishFood_item">
-                            <div class="foodItem_photo"><img src="~/images/food_photos/1.jpg" alt="" title="" /></div>
+                            <div class="foodItem_photo"><img src="~/images/food_photos/12.jpg" alt="" title="" /></div>
                             <div class="foodItem_content">
                                 <div class="foodItem_name">
-                                    <h2>Chicken</h2>
-                                    <div class="foodItem_price">$10</div>
+                                    <h2>Steak</h2>
+                                    <div class="foodItem_price">$17</div>
+                                </div>
+                                <div class="foodItem_desc">
+                                    <p>Accusantium quis aut voluptatem id quasi voluptate. At blanditiis voluptas deleniti nihil. Aperiam sed animi recusandae sint.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!--end dishFood Item-->
+                        <!--dishFood Item-->
+                        <div class="dishFood_item">
+                            <div class="foodItem_photo"><img src="~/images/food_photos/22.jpg" alt="" title="" /></div>
+                            <div class="foodItem_content">
+                                <div class="foodItem_name">
+                                    <h2>Shrimp</h2>
+                                    <div class="foodItem_price">$16</div>
+                                </div>
+                                <div class="foodItem_desc">
+                                    <p>Accusantium quis aut voluptatem id quasi voluptate. At blanditiis voluptas deleniti nihil. Aperiam sed animi recusandae sint.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!--end dishFood Item-->
+                        <!--dishFood Item-->
+                        <div class="dishFood_item">
+                            <div class="foodItem_photo"><img src="~/images/food_photos/21.jpg" alt="" title="" /></div>
+                            <div class="foodItem_content">
+                                <div class="foodItem_name">
+                                    <h2>Surf & Turf</h2>
+                                    <div class="foodItem_price">$12</div>
                                 </div>
                                 <div class="foodItem_desc">
                                     <p>Accusantium quis aut voluptatem id quasi voluptate. At blanditiis voluptas deleniti nihil. Aperiam sed animi recusandae sint.</p>
@@ -142,11 +170,39 @@
                             <div class="foodItem_photo"><img src="~/images/food_photos/1.jpg" alt="" title="" /></div>
                             <div class="foodItem_content">
                                 <div class="foodItem_name">
-                                    <h2>Chicken</h2>
-                                    <div class="foodItem_price">$10</div>
+                                    <h2>The Dub-2 Meat</h2>
+                                    <div class="foodItem_price">$20</div>
                                 </div>
                                 <div class="foodItem_desc">
-                                    <p>Accusantium quis aut voluptatem id quasi voluptate. At blanditiis voluptas deleniti nihil. Aperiam sed animi recusandae sint.</p>
+                                    <p>Frid Rice & Veggies included</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!--end dishFood Item-->
+                        <!--dishFood Item-->
+                        <div class="dishFood_item">
+                            <div class="foodItem_photo"><img src="~/images/food_photos/1.jpg" alt="" title="" /></div>
+                            <div class="foodItem_content">
+                                <div class="foodItem_name">
+                                    <h2>Little Everything-3 Meat</h2>
+                                    <div class="foodItem_price">$35</div>
+                                </div>
+                                <div class="foodItem_desc">
+                                    <p>Fried Rice & Veggies included</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!--end dishFood Item-->
+                        <!--dishFood Item-->
+                        <div class="dishFood_item">
+                            <div class="foodItem_photo"><img src="~/images/food_photos/1.jpg" alt="" title="" /></div>
+                            <div class="foodItem_content">
+                                <div class="foodItem_name">
+                                    <h2>Big Boy-4 Meat</h2>
+                                    <div class="foodItem_price">$40</div>
+                                </div>
+                                <div class="foodItem_desc">
+                                    <p>Fried Rice & Veggies included</p>
                                 </div>
                             </div>
                         </div>
@@ -164,11 +220,39 @@
                             <div class="foodItem_photo"><img src="~/images/food_photos/1.jpg" alt="" title="" /></div>
                             <div class="foodItem_content">
                                 <div class="foodItem_name">
-                                    <h2>Chicken</h2>
-                                    <div class="foodItem_price">$10</div>
+                                    <h2>Rice</h2>
+                                    <div class="foodItem_price">$3</div>
                                 </div>
                                 <div class="foodItem_desc">
-                                    <p>Accusantium quis aut voluptatem id quasi voluptate. At blanditiis voluptas deleniti nihil. Aperiam sed animi recusandae sint.</p>
+                                    <p>Frid Rice & Veggies included</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!--end dishFood Item-->
+                        <!--dishFood Item-->
+                        <div class="dishFood_item">
+                            <div class="foodItem_photo"><img src="~/images/food_photos/1.jpg" alt="" title="" /></div>
+                            <div class="foodItem_content">
+                                <div class="foodItem_name">
+                                    <h2>Noodles</h2>
+                                    <div class="foodItem_price">$3</div>
+                                </div>
+                                <div class="foodItem_desc">
+                                    <p>Fried Rice & Veggies included</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!--end dishFood Item-->
+                        <!--dishFood Item-->
+                        <div class="dishFood_item">
+                            <div class="foodItem_photo"><img src="~/images/food_photos/1.jpg" alt="" title="" /></div>
+                            <div class="foodItem_content">
+                                <div class="foodItem_name">
+                                    <h2>Sauces</h2>
+                                    <div class="foodItem_price">$.50</div>
+                                </div>
+                                <div class="foodItem_desc">
+                                    <p>Yum Yum & Teriyaki</p>
                                 </div>
                             </div>
                         </div>
