--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -58,13 +58,13 @@
                             <div class="headerRight_ActionBtn">
                                 <div class="service_wrapper">
                                     <div class="companyInfo_block">
-                                        <h4>702-1234568</h4>
-                                        <a href="tel:702-1234568" class="overlay_link"></a>
+                                        <h4>702-334-4136</h4>
+                                        <a href="tel:7023344136" class="overlay_link"></a>
                                     </div>
                                 </div>
 
                                 <div class="headerBtn_block">
-                                    <a href="#" target="_blank" class="social_icons">
+                                    <a href="https://www.instagram.com/backyardhibachilv" target="_blank" class="social_icons">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="26" height="25" viewBox="0 0 26 25" fill="none">
                                             <g clip-path="url(#clip0_7_299)">
                                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M7.63055 0.153411C5.5143 0.245224 3.68006 0.74272 2.19894 2.16086C0.712653 3.58645 0.201684 5.35713 0.105961 7.37082C0.0464573 8.62767 -0.301488 18.1229 0.707481 20.613C1.38789 22.2929 2.72797 23.5846 4.49108 24.2409C5.31378 24.5486 6.25292 24.7569 7.63055 24.8177C19.1496 25.319 23.4196 25.0461 25.2202 20.613C25.5397 19.8239 25.7596 18.9217 25.8204 17.6003C26.3469 6.49589 25.7351 4.08893 23.7275 2.16086C22.1351 0.633533 20.2621 -0.406151 7.63055 0.153411ZM7.7366 22.5844C6.47539 22.5298 5.79111 22.3278 5.33449 22.1578C4.18581 21.7285 3.32302 20.9023 2.87933 19.8043C2.11096 17.9122 2.3658 8.92565 2.43436 7.47153C2.50163 6.04718 2.80172 4.74542 3.84691 3.74045C5.14046 2.49972 6.81171 1.89165 18.1911 2.38547C19.6761 2.44998 21.033 2.73795 22.0808 3.74045C23.3743 4.98116 24.0159 6.6005 23.4933 17.5002C23.4364 18.7099 23.2256 19.3663 23.0484 19.8043C21.8777 22.689 19.1845 23.0894 7.7366 22.5844ZM18.3166 5.86203C18.3166 6.68339 19.0112 7.35129 19.8688 7.35129C20.7265 7.35129 21.4224 6.68339 21.4224 5.86203C21.4224 5.04068 20.7265 4.37338 19.8688 4.37338C19.0112 4.37338 18.3166 5.04068 18.3166 5.86203ZM6.32147 12.485C6.32147 16.0036 9.29535 18.8564 12.9639 18.8564C16.6324 18.8564 19.6062 16.0036 19.6062 12.485C19.6062 8.96628 16.6324 6.11533 12.9639 6.11533C9.29535 6.11533 6.32147 8.96628 6.32147 12.485ZM8.65244 12.485C8.65244 10.202 10.5824 8.34982 12.9639 8.34982C15.3453 8.34982 17.2753 10.202 17.2753 12.485C17.2753 14.7691 15.3453 16.6219 12.9639 16.6219C10.5824 16.6219 8.65244 14.7691 8.65244 12.485Z" fill="black" />
@@ -132,7 +132,7 @@
                     </div>
 
                     <div class="headerBtn_block">
-                        <a href="#" target="_blank" class="social_icons">
+                        <a href="https://www.instagram.com/backyardhibachilv" target="_blank" class="social_icons">
                             <svg xmlns="http://www.w3.org/2000/svg" width="26" height="25" viewBox="0 0 26 25" fill="none">
                                 <g clip-path="url(#clip0_7_299)">
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M7.63055 0.153411C5.5143 0.245224 3.68006 0.74272 2.19894 2.16086C0.712653 3.58645 0.201684 5.35713 0.105961 7.37082C0.0464573 8.62767 -0.301488 18.1229 0.707481 20.613C1.38789 22.2929 2.72797 23.5846 4.49108 24.2409C5.31378 24.5486 6.25292 24.7569 7.63055 24.8177C19.1496 25.319 23.4196 25.0461 25.2202 20.613C25.5397 19.8239 25.7596 18.9217 25.8204 17.6003C26.3469 6.49589 25.7351 4.08893 23.7275 2.16086C22.1351 0.633533 20.2621 -0.406151 7.63055 0.153411ZM7.7366 22.5844C6.47539 22.5298 5.79111 22.3278 5.33449 22.1578C4.18581 21.7285 3.32302 20.9023 2.87933 19.8043C2.11096 17.9122 2.3658 8.92565 2.43436 7.47153C2.50163 6.04718 2.80172 4.74542 3.84691 3.74045C5.14046 2.49972 6.81171 1.89165 18.1911 2.38547C19.6761 2.44998 21.033 2.73795 22.0808 3.74045C23.3743 4.98116 24.0159 6.6005 23.4933 17.5002C23.4364 18.7099 23.2256 19.3663 23.0484 19.8043C21.8777 22.689 19.1845 23.0894 7.7366 22.5844ZM18.3166 5.86203C18.3166 6.68339 19.0112 7.35129 19.8688 7.35129C20.7265 7.35129 21.4224 6.68339 21.4224 5.86203C21.4224 5.04068 20.7265 4.37338 19.8688 4.37338C19.0112 4.37338 18.3166 5.04068 18.3166 5.86203ZM6.32147 12.485C6.32147 16.0036 9.29535 18.8564 12.9639 18.8564C16.6324 18.8564 19.6062 16.0036 19.6062 12.485C19.6062 8.96628 16.6324 6.11533 12.9639 6.11533C9.29535 6.11533 6.32147 8.96628 6.32147 12.485ZM8.65244 12.485C8.65244 10.202 10.5824 8.34982 12.9639 8.34982C15.3453 8.34982 17.2753 10.202 17.2753 12.485C17.2753 14.7691 15.3453 16.6219 12.9639 16.6219C10.5824 16.6219 8.65244 14.7691 8.65244 12.485Z" fill="black" />
@@ -164,16 +164,16 @@
     </header>
     <!--End Main Header -->
 
-
     @RenderBody()
 
+    <!--Footer Section -->
     <footer class="section_wrap footer_section">
         <div class="container">
             <div class="footerBg_block">
                 <div class="ftPhoneInfo_container">
-                    <div class="ftPhoneNo">Call us on <a href="tel:7021236548">+702 1236548</a></div>
+                    <div class="ftPhoneNo">Call us on <a href="tel:7023344136">702-334-4136</a></div>
                     <div class="ftReservationBtn">
-                        <a asp-action="Contact">Make a Reservation</a>
+                        <a href="#">Make a Reservation</a>
                     </div>
                 </div>
                 <div class="ftInfo_container">
@@ -184,7 +184,7 @@
                         <div class="col-lg-4">
                             <div class="ft_companyInfo_block">
                                 <div class="ftCompany_address">
-                                    <p>Lake House, 13 Hanway,<br>Square, Neveda, LV</p>
+                                    <p>4333 Helaman Ave<br>Las Vegas NV 89120-1517</p>
                                 </div>
                                 <div class="ftCompany_openClose_time">
                                     <p>Monday-Wednesday: 11am-9pm</p>
@@ -194,27 +194,31 @@
                             </div>
                         </div>
                         <div class="col-lg-2">
+                            <!--
+                            <div class="ft_quick_links">
+                                <a href="index.html">Home</a>
+                                <a href="about-us.html">About us</a>
+                                <a href="contact.html">Contact</a>
+                            </div>-->
+                        </div>
+                        <div class="col-lg-3">
+                            <!--
+                            <div class="ft_quick_links">
+                                <a href="privacy-policy.html">Privacy Policy</a>
+                                <a href="terms-and-conditions.html">Terms and Conditions</a>
+                            </div> -->
                             <div class="ft_quick_links">
                                 <a asp-action="Index">Home</a>
                                 <a asp-action="AboutUs">About us</a>
                                 <a asp-action="Contact">Contact</a>
                             </div>
                         </div>
-                        <div class="col-lg-3">
-                            <div class="ft_quick_links">
-                                <a asp-action="Privacy">Privacy Policy</a>
-                                <a asp-action="TermsAndConditions">Terms and Conditions</a>
-                            </div>
-                        </div>
                     </div>
                 </div>
                 <div class="ftCopyright_container">
-                    <div class="copyrightInfo_block">
-                        Copyright ©
-                        <script>document.write(new Date().getFullYear());</script> Backyard Hibachi. All rights reserved.
-                    </div>
+                    <div class="copyrightInfo_block">Copyright ©<script>document.write(new Date().getFullYear());</script> Backyard Hibachi. All rights reserved.</div>
                     <div class="footerSocial_icon">
-                        <a href="#" target="_blank" class="social_icons">
+                        <a href="https://www.instagram.com/backyardhibachilv" target="_blank" class="social_icons">
                             <svg xmlns="http://www.w3.org/2000/svg" width="26" height="25" viewBox="0 0 26 25" fill="none">
                                 <g clip-path="url(#clip0_7_299)">
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M7.63055 0.153411C5.5143 0.245224 3.68006 0.74272 2.19894 2.16086C0.712653 3.58645 0.201684 5.35713 0.105961 7.37082C0.0464573 8.62767 -0.301488 18.1229 0.707481 20.613C1.38789 22.2929 2.72797 23.5846 4.49108 24.2409C5.31378 24.5486 6.25292 24.7569 7.63055 24.8177C19.1496 25.319 23.4196 25.0461 25.2202 20.613C25.5397 19.8239 25.7596 18.9217 25.8204 17.6003C26.3469 6.49589 25.7351 4.08893 23.7275 2.16086C22.1351 0.633533 20.2621 -0.406151 7.63055 0.153411ZM7.7366 22.5844C6.47539 22.5298 5.79111 22.3278 5.33449 22.1578C4.18581 21.7285 3.32302 20.9023 2.87933 19.8043C2.11096 17.9122 2.3658 8.92565 2.43436 7.47153C2.50163 6.04718 2.80172 4.74542 3.84691 3.74045C5.14046 2.49972 6.81171 1.89165 18.1911 2.38547C19.6761 2.44998 21.033 2.73795 22.0808 3.74045C23.3743 4.98116 24.0159 6.6005 23.4933 17.5002C23.4364 18.7099 23.2256 19.3663 23.0484 19.8043C21.8777 22.689 19.1845 23.0894 7.7366 22.5844ZM18.3166 5.86203C18.3166 6.68339 19.0112 7.35129 19.8688 7.35129C20.7265 7.35129 21.4224 6.68339 21.4224 5.86203C21.4224 5.04068 20.7265 4.37338 19.8688 4.37338C19.0112 4.37338 18.3166 5.04068 18.3166 5.86203ZM6.32147 12.485C6.32147 16.0036 9.29535 18.8564 12.9639 18.8564C16.6324 18.8564 19.6062 16.0036 19.6062 12.485C19.6062 8.96628 16.6324 6.11533 12.9639 6.11533C9.29535 6.11533 6.32147 8.96628 6.32147 12.485ZM8.65244 12.485C8.65244 10.202 10.5824 8.34982 12.9639 8.34982C15.3453 8.34982 17.2753 10.202 17.2753 12.485C17.2753 14.7691 15.3453 16.6219 12.9639 16.6219C10.5824 16.6219 8.65244 14.7691 8.65244 12.485Z" fill="black" />
